Lights are not rendered properly on GPU (build: April 10th) #48103

Closed
opened 2016-04-10 20:46:13 +02:00 by soulfire · 13 comments

Win 10
AMD HD 7850, Crimson 16.4.1 (http://support.amd.com/en-us/kb-articles/Pages/AMD-Radeon-Software-Crimson-Edition-16.4.1.aspx)
Blender latest build: April 10th

Lights are not rendered on GPU only in viewport. I don't understand why.
light_.blend

Win 10 AMD HD 7850, Crimson 16.4.1 (http://support.amd.com/en-us/kb-articles/Pages/AMD-Radeon-Software-Crimson-Edition-16.4.1.aspx) Blender latest build: April 10th Lights are not rendered on GPU only in viewport. I don't understand why. [light_.blend](https://archive.blender.org/developer/F302012/light_.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @TomG

Added subscriber: @TomG
Author

I'm using Cycles.

I'm using Cycles.
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Seems like a OpenCL issue

Seems like a OpenCL issue
Sergey Sharybin was assigned by Aaron Carlisle 2016-04-10 21:22:03 +02:00
Author

Also, I noticed that light falloff linear node acts strange on emission mat.

Also, I noticed that **light falloff** *linear* node acts strange on emission mat.

Added subscriber: @VukGardasevic

Added subscriber: @VukGardasevic

Disconnecting the Light Falloff node makes the lights show up in the render. Tested on a R7 360 with (non WHQL) 16.3 Crimson drivers.

light_test.jpg

Disconnecting the Light Falloff node makes the lights show up in the render. Tested on a R7 360 with (non WHQL) 16.3 Crimson drivers. ![light_test.jpg](https://archive.blender.org/developer/F302055/light_test.jpg)
Author

Could the bug be in the light falloff node ?

Could the bug be in the light falloff node ?

This issue was referenced by 45a089c138

This issue was referenced by 45a089c1388e0583fbae832a5c24e343a7d752cd

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Thank you.

Thank you.

This issue was referenced by blender/cycles@d9920604bf

This issue was referenced by blender/cycles@d9920604bf53f2af209bb274870a4db723e04f9a
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48103
No description provided.