Fix T48103: Wrong renders on AMD OpenCL when Light Falloff node is used