intern/cycles/render/nodes.h
@@ -619,6 +619,7 @@ class LightFalloffNode : public ShaderNode {
 public:
 	SHADER_NODE_CLASS(LightFalloffNode)
 	bool has_spatial_varying() { return true; }
+	virtual int get_group() { return NODE_GROUP_LEVEL_2; }
 };
 
 class ObjectInfoNode : public ShaderNode {
